# WxeUI

./: .clangd  .gitignore  CMakeLists.txt  README.md
docs/: advanced_features.md  best_practices.md  building.md
examples/: CMakeLists.txt
examples/basic_window/: main.cpp
examples/complete_showcase/: main.cpp
examples/directx12_demo/: CMakeLists.txt  main.cpp
examples/hdr_display/: main.cpp
examples/layer_system/: main.cpp
examples/multi_monitor/: main.cpp
examples/performance_benchmark/: main.cpp
src/: dpi_helper.cc  graphics_context.cc  layer_system.cc  skia_canvas.cc  skia_canvas_advanced.cc  window_manager.cc  window_winapi.cc  window_winapi.h  window_winapi_methods.cc
src/cache/: fragment_cache.cc  fragment_cache.h  shader_cache.h  texture_cache.h
src/capture/: frame_capture.cc  frame_capture.h
src/events/: event_system.cc  event_system.h
src/features/: openscreen.cc  openscreen.h
src/graphics/: angle_context.cc  angle_context.h  directx11_context.cc  directx11_context.h  directx12_context.cc  directx12_context.h  graphics_manager.cc  graphics_manager.h  vulkan_context.cc  vulkan_context.h
src/memory/: memory_manager.cc  memory_manager.h
src/profiling/: cache_profiler.h
src/rendering/: advanced_effects.cc  advanced_effects.h  performance_monitor.cc  performance_monitor.h  quality_manager.cc  quality_manager.h  skia_3d.cc  skia_3d.h  text_renderer.cc  text_renderer.h  vector_graphics.cc  vector_graphics.h
